<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tfmc.justin</groupId>
    <artifactId>activity</artifactId>
    <version>1.0</version>

    <name>activity</name>
    <url>tfminecraft.net</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.3-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <!-- VotingPlugin: jar-only release, compiled against for PlayerVoteEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>VotingPlugin</artifactId>
            <version>7.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/VotingPlugin-7.0.jar</systemPath>
        </dependency>

        <!-- MusicalInstruments: jar-only release, compiled against for InstrumentPlayEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>musicalinstruments</artifactId>
            <version>2.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/musicalinstruments-2.5.jar</systemPath>
        </dependency>

        <!-- geiger_counter: jar-only release, compiled against for GeigerSourceCollectEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>geiger_counter</artifactId>
            <version>1.1.3</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/geiger_counter-1.1.3.jar</systemPath>
        </dependency>

        <!-- MMOCore: jar-only release, compiled against for PlayerExperienceGainEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>MMOCore</artifactId>
            <version>1.13.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/MMOCore-1.13.1.jar</systemPath>
        </dependency>

        <!-- MMOItems: jar-only release, compiled against for
             PlayerUseCraftingStationEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>MMOItems</artifactId>
            <version>6.10.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/MMOItems-6.10.1.jar</systemPath>
        </dependency>

        <!-- MythicLib: MMOCore's own hard dependency. Not used directly, but
             MMOCore's Profession implements one of its interfaces, so javac
             needs it on the classpath to resolve Profession at all. -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>MythicLib</artifactId>
            <version>1.7.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/MythicLib-dist-1.7.1.jar</systemPath>
        </dependency>

        <!-- VFBuilders: jar-only release, compiled against for VehicleConstructEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>vfbuilders</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/vfbuilders-1.0.0.jar</systemPath>
        </dependency>

        <!-- VehicleFramework: VFBuilders' own hard dependency, on the classpath
             so javac can resolve VehicleConstructEvent's ActiveVehicle field -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>vehicleframework</artifactId>
            <version>1.1.11</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/vehicleframework-1.1.11.jar</systemPath>
        </dependency>

        <!-- TLibs: shared by every tfminecraft plugin below, needed on the
             classpath for their event types to resolve -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>TLibs</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/TLibs-1.0.jar</systemPath>
        </dependency>

        <!-- RPCharacters: jar-only release, compiled against for CharacterChatEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>rpcharacters</artifactId>
            <version>1.1.7</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/rpcharacters-1.1.7.jar</systemPath>
        </dependency>

        <!-- InteractibleFurniture: jar-only release, compiled against for FurniturePlaceEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>interactiblefurniture</artifactId>
            <version>0.1.3-BETA</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/interactiblefurniture-0.1.3-BETA.jar</systemPath>
        </dependency>

        <!-- SimpleFactions: jar-only release, compiled against for BattleEndedEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>simplefactions</artifactId>
            <version>2.8.7</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/simplefactions-2.8.7.jar</systemPath>
        </dependency>

        <!-- AdvancedCrafting: jar-only release, compiled against for
             ItemCraftedEvent and AlloyCraftedEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>advancedcrafting</artifactId>
            <version>1.1.7</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/advancedcrafting-1.1.7.jar</systemPath>
        </dependency>

        <!-- Archaeo: jar-only release, compiled against for FindRecoveredEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>archeology-plugin</artifactId>
            <version>1.0.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/archeology-plugin-1.0.1.jar</systemPath>
        </dependency>

        <!-- MarketBlock: jar-only release, compiled against for MarketSaleEvent -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>marketblock</artifactId>
            <version>0.0.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/marketblock-0.0.2.jar</systemPath>
        </dependency>

        <!-- Games: API-only stub jar, the full plugin cannot be built here -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>games</artifactId>
            <version>0.1.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/games-0.1.1-api.jar</systemPath>
        </dependency>

        <!-- Cooking: API-only stub jar, the full plugin cannot be built here -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>cooking</artifactId>
            <version>0.1.5-ALPHA</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/cooking-0.1.5-ALPHA-api.jar</systemPath>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>

        </plugins>
    </build>
</project>
